# airless

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: theory.md
src/airless/: binning.py  config.py  fit.py  integrate.py  io.py  model.py  opposition_surge.py  plotting.py
